--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li>Logo</li>
+                <li>Projects</li>
+                <li>Skills</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <h1>Natalie Handley</h1>
+        <h2>Software Developer</h2>
+    </header>
+    <main>
+        <section>
+            <h2>Projects</h2>
+        </section>
+
+    </main>
+
+
+
+
+
+</body>
+
+</html>
