added project section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
     <main>
         <section>
             <h2>Projects</h2>
+            <div class="box-1">
+                <div class="portfolio-image-1"></div>
+                <p>Text about project</p>
+            </div>
+            <div class="box-2">
+                <div class="portfolio-image-2"></div>
+                <p>Text about project</p>
+            </div>
+            <div class="box-3">
+                <div class="portfolio-image-3"></div>
+                <p>Text about project</p>
+            </div>
+            <div class="box-4">
+                <div class="portfolio-image-4"></div>
+                <p>Text about project</p>
+            </div>
         </section>
 
     </main>
