created skills section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
             </div>
         </section>
 
+        <section>
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML icon</li>
+                <li>CSS icon</li>
+                <li>SASS icon</li>
+                <li>Github icon</li>
+            </ul>
+        </section>
+
     </main>
 
 
