created about section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
             </ul>
         </section>
 
+        <section>
+            <h2>About</h2>
+            <p>I am currently on the self paced Software Developer course at _nology gaining new skills in HTML and CSS
+                as well using GitHub. </p>
+
+            <p>Prior to this I have been working as a dentist for the last twelve years. A lot of the skills I have
+                learnt
+                from working in dentistry can definitely be translated across to working in tech. I am a good
+                communicator,
+                practical and can think logically to solve complex problems!</p>
+
+            <p>I would love to use my new coding skills to develop apps and technology potentially within healthcare.
+            </p>
+        </section>
+
     </main>
 
 
