created contact section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
             </p>
         </section>
 
+        <section>
+            <h2>Contact</h2>
+            <ul>
+                <li>Twitter icon</li>
+                <li>Github icon</li>
+                <li>Envelope icon</li>
+                <li>Phone icon</li>
+                <li>LinkdIn icon</li>
+            </ul>
+        </section>
+
     </main>
 
 
