style navbar and add padding to body

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700&display=swap');
+    </style>
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>Logo</li>
+        <nav class="nav-bar">
+            <div class="logo">NH</div>
+            <ul class="list-items">
                 <li>Projects</li>
                 <li>Skills</li>
                 <li>Contact</li>
@@ -67,24 +70,17 @@
             <p>I would love to use my new coding skills to develop apps and technology potentially within healthcare.
             </p>
         </section>
-
-        <section>
-            <h2>Contact</h2>
-            <ul>
-                <li>Twitter icon</li>
-                <li>Github icon</li>
-                <li>Envelope icon</li>
-                <li>Phone icon</li>
-                <li>LinkdIn icon</li>
-            </ul>
-        </section>
-
     </main>
-
-
-
-
-
+    <footer>
+        <h2>Contact</h2>
+        <ul>
+            <li>Twitter icon</li>
+            <li>Github icon</li>
+            <li>Envelope icon</li>
+            <li>Phone icon</li>
+            <li>LinkdIn icon</li>
+        </ul>
+    </footer>
 </body>
 
 </html>
