underline nav-bar list items

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
                 <li>Contact</li>
             </ul>
         </nav>
-        <h1>Natalie Handley</h1>
-        <h2>Software Developer</h2>
+        <div class="hero">
+            <h1>Natalie Handley</h1>
+            <h2>Software Developer</h2>
+        </div>
     </header>
     <main>
         <section>
