edited name and hero box

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
             </ul>
         </nav>
         <div class="hero">
+            <div class="name">
             <h1>Natalie Handley</h1>
             <h2>Software Developer</h2>
+        </div>
+        <img src=""
         </div>
     </header>
     <main>
