add classes to h2

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </nav>
         <div class="hero">
             <div class="name">
-            <h1>Natalie Handley</h1>
-            <h2>Software Developer</h2>
-        </div>
-        <img src=""
+                <h1>Natalie Handley</h1>
+                <h2 class="sub-text">Software Developer</h2>
+            </div>
+            <img class="yellow-butterfly" src="images/butterflyEdit.svg">
         </div>
     </header>
     <main>
