--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class = "projects">
             <h2>Projects</h2>
             <div class="box-1">
                 <div class="portfolio-image-1"></div>
