--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
         </div>
     </header>
     <main>
-        <section class = "projects">
+        <section class="projects">
             <h2>Projects</h2>
             <div class="box-1">
-                <div class="portfolio-image-1"></div>
+                <div class="portfolio-image-1"><img src="images/bakery.JPG">
+
+                </div>
                 <p>Text about project</p>
             </div>
             <div class="box-2">
