--- a/index.html
+++ b/index.html
@@ -31,23 +31,22 @@
         </div>
     </header>
     <main>
+        <h2>Projects</h2>
         <section class="projects">
-            <h2>Projects</h2>
-            <div class="box-1">
-                <div class="portfolio-image-1"><img src="images/bakery.JPG">
 
-                </div>
+            <div class="box box-1">
+                <img src="images/bakery.JPG">
                 <p>Text about project</p>
             </div>
-            <div class="box-2">
+            <div class="box box-2">
                 <div class="portfolio-image-2"></div>
                 <p>Text about project</p>
             </div>
-            <div class="box-3">
+            <div class="box box-3">
                 <div class="portfolio-image-3"></div>
                 <p>Text about project</p>
             </div>
-            <div class="box-4">
+            <div class="box box-4">
                 <div class="portfolio-image-4"></div>
                 <p>Text about project</p>
             </div>
