--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
                 <p>Text about project</p>
             </div>
             <div class="box box-2">
-                <div class="portfolio-image-2"></div>
+                <img src="images/Nature.jpg">
                 <p>Text about project</p>
             </div>
             <div class="box box-3">
-                <div class="portfolio-image-3"></div>
+                <img src="images/property.JPG">
                 <p>Text about project</p>
             </div>
             <div class="box box-4">
-                <div class="portfolio-image-4"></div>
+                <img src="images/blog.JPG">
                 <p>Text about project</p>
             </div>
         </section>
