added placeholder text

--- a/index.html
+++ b/index.html
@@ -37,18 +37,30 @@
             <div class="box box-1">
                 <img src="images/bakery.JPG">
                 <p>Text about project</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam magnam nobis facilis minus
+                    voluptates impedit exercitationem incidunt, consequuntur quia sapiente consequatur tempora, ipsa
+                    omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
             </div>
             <div class="box box-2">
                 <img src="images/Nature.jpg">
                 <p>Text about project</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam magnam nobis facilis minus
+                    voluptates impedit exercitationem incidunt, consequuntur quia sapiente consequatur tempora, ipsa
+                    omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
             </div>
             <div class="box box-3">
                 <img src="images/property.JPG">
                 <p>Text about project</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam magnam nobis facilis minus
+                    voluptates impedit exercitationem incidunt, consequuntur quia sapiente consequatur tempora, ipsa
+                    omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
             </div>
             <div class="box box-4">
                 <img src="images/blog.JPG">
                 <p>Text about project</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam magnam nobis facilis minus
+                    voluptates impedit exercitationem incidunt, consequuntur quia sapiente consequatur tempora, ipsa
+                    omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
             </div>
         </section>
 
