add class to skills section

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <main>
         <h2>Projects</h2>
         <section class="projects">
-
             <div class="box box-1">
                 <img src="images/bakery.JPG">
                 <p>Text about project</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam magnam nobis facilis minus
                     voluptates impedit exercitationem incidunt, consequuntur quia sapiente consequatur tempora, ipsa
                     omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
+
             </div>
             <div class="box box-2">
                 <img src="images/Nature.jpg">
@@ -63,9 +63,8 @@
                     omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
             </div>
         </section>
-
-        <section>
-            <h2>Skills</h2>
+        <section class="skills">
+            <h2 class="sub-text">Skills</h2>
             <ul>
                 <li>HTML icon</li>
                 <li>CSS icon</li>
@@ -73,7 +72,6 @@
                 <li>Github icon</li>
             </ul>
         </section>
-
         <section>
             <h2>About</h2>
             <p>I am currently on the self paced Software Developer course at _nology gaining new skills in HTML and CSS
