--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700&display=swap');
     </style>
+    <script src="https://kit.fontawesome.com/e75c776465.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -65,11 +67,11 @@
         </section>
         <section class="skills">
             <h2 class="sub-text">Skills</h2>
-            <ul>
-                <li>HTML icon</li>
-                <li>CSS icon</li>
-                <li>SASS icon</li>
-                <li>Github icon</li>
+            <ul class="skills-icons">
+                <li><i class="fab fa-html5"></i></li>
+                <li><i class="fab fa-css3-alt"></i></li>
+                <li><i class="fab fa-sass"></i></li>
+                <li><i class="fab fa-github"></i></li>
             </ul>
         </section>
         <section>
