--- a/index.html
+++ b/index.html
@@ -11,19 +11,48 @@
         @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700&display=swap');
     </style>
     <script src="https://kit.fontawesome.com/e75c776465.js" crossorigin="anonymous"></script>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+
 
 </head>
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Never expand</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
+        aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExample01">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-md-0">
+            <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+        </form>
+    </div>
+</nav>
 
 <body>
     <header>
-        <nav class="nav-bar">
-            <div class="logo">NH</div>
-            <ul class="list-items">
-                <li>Projects</li>
-                <li>Skills</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
         <div class="hero">
             <div class="name">
                 <h1>Natalie Handley</h1>
@@ -31,6 +60,19 @@
             </div>
             <img class="yellow-butterfly" src="images/butterflyEdit.svg">
         </div>
+        <nav class="nav-bar">
+            <div class="logo">NH</div>
+            <ul class="list-items">
+                <li class="nav-list">Projects</li>
+                <li class="nav-list">Skills</li>
+                <li class="nav-list">Contact</li>
+            </ul>
+        </nav>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#227c9d" fill-opacity="1"
+                d="M0,64L80,58.7C160,53,320,43,480,74.7C640,107,800,181,960,202.7C1120,224,1280,192,1360,176L1440,160L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
+            </path>
+        </svg>
     </header>
     <main>
         <h2>Projects</h2>
@@ -65,17 +107,23 @@
                     omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
             </div>
         </section>
+        <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#227c9d" fill-opacity="1"
+                d="M0,64L80,58.7C160,53,320,43,480,74.7C640,107,800,181,960,202.7C1120,224,1280,192,1360,176L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+            </path>
+        </svg>
         <section class="skills">
+
             <h2 class="sub-text">Skills</h2>
             <ul class="skills-icons">
-                <li><i class="fab fa-html5"></i></li>
-                <li><i class="fab fa-css3-alt"></i></li>
-                <li><i class="fab fa-sass"></i></li>
-                <li><i class="fab fa-github"></i></li>
+                <li><i class="fab fa-html5 fa-3x"></i></li>
+                <li><i class="fab fa-css3-alt fa-3x"></i></li>
+                <li><i class="fab fa-sass fa-3x"></i></li>
+                <li><i class="fab fa-github fa-3x"></i></li>
             </ul>
         </section>
-        <section>
-            <h2>About</h2>
+        <section class="about">
+            <h2 class="about-name">About</h2>
             <p>I am currently on the self paced Software Developer course at _nology gaining new skills in HTML and CSS
                 as well using GitHub. </p>
 
@@ -92,13 +140,27 @@
     <footer>
         <h2>Contact</h2>
         <ul>
-            <li>Twitter icon</li>
-            <li>Github icon</li>
-            <li>Envelope icon</li>
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="fab fa-github"></li>
+            <li><i class="fas fa-envelope"></i></li>
             <li>Phone icon</li>
             <li>LinkdIn icon</li>
         </ul>
     </footer>
+    !-- JQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+    <!-- Bootstrap core JavaScript
+================================================== -->
 </body>
+
 
 </html>
