--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
                     omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
             </div>
         </section>
-        <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#227c9d" fill-opacity="1"
-                d="M0,64L80,58.7C160,53,320,43,480,74.7C640,107,800,181,960,202.7C1120,224,1280,192,1360,176L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
-            </path>
-        </svg>
-        <section class="skills">
 
+        <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#227c9d" fill-opacity="1"
+                    d="M0,160L48,144C96,128,192,96,288,74.7C384,53,480,43,576,53.3C672,64,768,96,864,117.3C960,139,1056,149,1152,138.7C1248,128,1344,96,1392,80L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+                </path>
+            </svg>
+        </div>
+        <section class="skills">
             <h2 class="sub-text">Skills</h2>
             <ul class="skills-icons">
                 <li><i class="fab fa-html5 fa-3x"></i></li>
