add ids in navbar

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
     <div class="collapse navbar-collapse" id="navbarsExample03">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Projects <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#projects">Projects <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Skills</a>
+                <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
             </li>
         </ul>
     </div>
@@ -55,7 +58,7 @@
     </header>
     <main>
         <h2>Projects</h2>
-        <section class="projects">
+        <section id="projects" class="projects">
             <div class="box box-1">
                 <img src="images/bakery.JPG">
                 <p>Text about project</p>
@@ -94,8 +97,8 @@
                 </path>
             </svg>
         </div>
-        <section class="skills">
-            <h2 class="sub-text">Skills</h2>
+        <section id="skills" class="skills">
+            <h2 class="skills-text">Skills</h2>
             <ul class="skills-icons">
                 <li><i class="fab fa-html5 fa-3x"></i></li>
                 <li><i class="fab fa-css3-alt fa-3x"></i></li>
@@ -103,7 +106,7 @@
                 <li><i class="fab fa-github fa-3x"></i></li>
             </ul>
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <h2 class="about-name">About</h2>
             <p>I am currently on the self paced Software Developer course at _nology gaining new skills in HTML and CSS
                 as well using GitHub. </p>
@@ -118,7 +121,7 @@
             </p>
         </section>
     </main>
-    <footer>
+    <footer id="contact">
         <h2>Contact</h2>
         <ul class="contact">
             <li><i class="fab fa-twitter"></i></li>
