--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
                 <li><i class="fab fa-github fa-3x"></i></li>
             </ul>
         </section>
+        <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#227c9d" fill-opacity="1"
+                    d="M0,320L60,314.7C120,309,240,299,360,266.7C480,235,600,181,720,133.3C840,85,960,43,1080,32C1200,21,1320,43,1380,53.3L1440,64L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+                </path>
+            </svg>
+
+        </div>
         <section id="about" class="about">
             <h2 class="about-name">About</h2>
             <p>I am currently on the self paced Software Developer course at _nology gaining new skills in HTML and CSS
@@ -121,6 +129,13 @@
             </p>
         </section>
     </main>
+    <div class="wave">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#a8dadc" fill-opacity="1"
+                d="M0,320L60,314.7C120,309,240,299,360,266.7C480,235,600,181,720,133.3C840,85,960,43,1080,32C1200,21,1320,43,1380,53.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+            </path>
+        </svg>
+    </div>
     <footer id="contact">
         <h2>Contact</h2>
         <ul class="contact">
