--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-
-
     <script src="https://kit.fontawesome.com/e75c776465.js" crossorigin="anonymous"></script>
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
@@ -43,8 +40,8 @@
     <header>
         <div class="hero">
             <div class="name">
-                <h1>Natalie Handley</h1>
-                <h2 class="sub-text">Software Developer</h2>
+                <h1 class="name__heading">Natalie Handley</h1>
+                <h2 class="name__sub-heading">Software Developer</h2>
             </div>
             <img class="yellow-butterfly" src="images/butterflyEdit.svg">
         </div>
@@ -96,8 +93,8 @@
             </svg>
         </div>
         <section id="skills" class="skills">
-            <h2 class="skills-text">Skills</h2>
-            <ul class="skills-icons">
+            <h2 class="skills__text">Skills</h2>
+            <ul class="skills__icons">
                 <li><i class="fab fa-html5 fa-3x"></i></li>
                 <li><i class="fab fa-css3-alt fa-3x"></i></li>
                 <li><i class="fab fa-sass fa-3x"></i></li>
@@ -113,7 +110,7 @@
 
         </div>
         <section id="about" class="about">
-            <h2 class="about-name">About</h2>
+            <h2 class="about__name">About</h2>
             <p>I am currently on the self paced Software Developer course at _nology gaining new skills in HTML and CSS
                 as well using GitHub. </p>
 
@@ -134,9 +131,9 @@
             </path>
         </svg>
     </div>
-    <footer id="contact">
-        <h2>Contact</h2>
-        <ul class="contact">
+    <footer id="contact" class="contact">
+        <h2 class="contact__heading">Contact</h2>
+        <ul class="contact__list">
             <li><i class="fab fa-twitter"></i></li>
             <li><i class="fab fa-github"></i></li>
             <li><i class="fas fa-envelope"></i></li>
