--- a/index.html
+++ b/index.html
@@ -55,29 +55,29 @@
         <h2>Projects</h2>
         <section id="projects" class="projects">
             <div class="box box-1">
-                <img src="images/bakery.JPG">
-                <p>Text about project</p>
+                <a href="http://127.0.0.1:5500/index.html"> <img src="images/game.JPG"></a>
+                <p>Alphabet Game</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam magnam nobis facilis minus
                     voluptates impedit exercitationem incidunt, consequuntur quia sapiente consequatur tempora, ipsa
                     omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
 
             </div>
             <div class="box box-2">
-                <img src="images/Nature.jpg">
+                <img src="images/bakery.JPG">
                 <p>Text about project</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam magnam nobis facilis minus
                     voluptates impedit exercitationem incidunt, consequuntur quia sapiente consequatur tempora, ipsa
                     omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
             </div>
             <div class="box box-3">
-                <img src="images/property.JPG">
+                <img src="images/Nature.jpg">
                 <p>Text about project</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam magnam nobis facilis minus
                     voluptates impedit exercitationem incidunt, consequuntur quia sapiente consequatur tempora, ipsa
                     omnis labore quaerat ullam. Impedit, nulla fugiat!</p>
             </div>
             <div class="box box-4">
-                <img src="images/blog.JPG">
+                <img src="images/property.JPG">
                 <p>Text about project</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam magnam nobis facilis minus
                     voluptates impedit exercitationem incidunt, consequuntur quia sapiente consequatur tempora, ipsa
